# cyclelayer-mvp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: baseline.yaml  cpu_baseline.yaml  cpu_cyclelayer.yaml  cyclelayer.yaml  physresnet.yaml  test_run.yaml
docs/: interpretation.md  results_session5.md  runbook_session4_cases.md
notebooks/: 01_data_exploration.ipynb  colab_training.ipynb  colab_training.py
results/ds01/case_library_cnn/: best_windows.csv  mid_windows.csv  summary.json  unit_manifest.csv  worst_windows.csv
results/ds01/case_library_cyclelayer_v1/: best_windows.csv  mid_windows.csv  summary.json  unit_manifest.csv  worst_windows.csv
scripts/: analyze_predictions.py  build_case_library.py  compare_runs.py  evaluate.py  inspect_hdf5.py  run_cases.py  run_louo.py  train.py
src/cyclelayer/: __init__.py
src/cyclelayer/data/: __init__.py  ncmapss.py  preprocessing.py  splits.py
src/cyclelayer/evaluation/: __init__.py  metrics.py
src/cyclelayer/models/: __init__.py  baselines.py  brayton_cycle.py  cycle_layer.py  encoder.py  physresnet.py  prognostics.py
src/cyclelayer/training/: __init__.py  losses.py  trainer.py
tests/: test_brayton_cycle.py  test_dataset.py  test_pipeline_guards.py
